


FEATURES TO BE IMPLEMENTED

A predict method for runjags objects

Capability to have no valid monitored variables

Implement concurrent trace, mean and variance monitors



VERSION HISTORY


Version 2.2.2-2

NEW FEATURES

Additional options in template_huiwalter for PopulationsUsing, covariance, and outcome check

BUG FIXES

Constraints imposed on se_prob, sp_prob and Youden's J in template_huiwalter

Removal of is.R and fixing documentation issues in read.jagsfile (as requested by CRAN)



Version 2.2.0

NEW FEATURES

Migration to GitHub and re-structuring of the package to use tidy package development

Start of migration of code base away from run.jags and towards run_jags

Compatibility with the modeest package version >= 2.3.2

Removal of support for xgrid


BUG FIXES

A bug preventing back-compatibility with runjags 1.2.0 was fixed (thanks to Ollie Wearn)

Renamed an argument in the tailf function to avoid the use of 'return' as a variable name

Bug fixed in drop.k that could cause issues with reading data correctly



Version 2.0.4-6

Update required by CRAN due to change in the behaviour of class(c('matrix','array'))


Version 2.0.4-4

Update required by CRAN to allow compilation on the new toolchain for Windows


Version 2.0.4

NEW FEATURES

The accompanying manuscript has now been accepted in JSS - please use the following citation for runjags in publications using results generated using runjags:
Matthew J. Denwood (2016). runjags: An R Package Providing Interface Utilities, Model Templates, Parallel Computing Methods and Additional Distributions for MCMC Models in JAGS. Journal of Statistical Software, 71(9), 1-25. doi:10.18637/jss.v071.i09

A warning is now given when interrupting snow and rjparallel methods that zombie JAGS processes may remain in the background

A warning is now given when using missing values with predictor variables in template.jags


BUG FIXES
